Bug 246681 - showlegend="false" attribute not saved in state file
Summary: showlegend="false" attribute not saved in state file
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: Unlisted Binaries Microsoft Windows
: NOR normal
Target Milestone: 2.0.0
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-04 11:54 UTC by Peter Milne
Modified: 2010-11-12 10:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Milne 2010-08-04 11:54:18 UTC
Version:           2.0.0_beta4 (using Devel) 
OS:                MS Windows

Sometimes the legend isn't wanted. It's easy to remove, but after save/restore, the legend is back..

Reproducible: Didn't try

Steps to Reproduce:
Removed legend from display (right-click, delete)

Saved state. Restart. Restore state

Plot is restored, but the legend is back!



Attribute in saved kst file:
graphics.view.plot.showlegend="true"

Manual edit to file to change to:
graphics.view.plot.showlegend="false"

Results in correct behaviour on restore state.

Looks like Kst is neglecting to store the correct state of the attribute.

This probably isn't specific to the Windows port?.
Comment 1 Netterfield 2010-08-07 00:23:44 UTC
Linux/SVN, I don't see this.  Can someone check with Windows/svn?
Comment 2 Netterfield 2010-08-09 17:55:40 UTC
SVN commit 1161066 by netterfield:

In base/offset mode, make room for the Y label if it gets too big.

also fix:
BUG: 246681



 M  +2 -1      devel-docs/Kst2Specs/Bugs  
 M  +9 -1      src/libkstapp/legenditem.cpp  
 M  +1 -0      src/libkstapp/legenditem.h  
 M  +9 -1      src/libkstapp/plotitem.cpp  
 M  +2 -0      src/libkstapp/plotitem.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1161066
Comment 3 Peter Kümmel 2010-08-14 12:14:56 UTC
Change version from 2.0.0_devel to 2.0.0 to simplify version numbering.
Comment 4 Peter Kümmel 2010-11-12 10:42:37 UTC
These bugs are solved with 2.0.0