In base/offset mode, make room for the Y label if it gets too big.

also fix:
BUG: 246681



git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1161066 283d02a7-25f6-0310-bc7c-ecb5cbfe19da